--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ if(USE_MINIAUDIO)
     list(APPEND FETCH_CONTENTS miniaudio)
 endif()
 FetchContent_MakeAvailable(${FETCH_CONTENTS})
+find_package(Threads REQUIRED)
 
 # Compiler specific options
 if (NOT MSVC)
@@ -51,5 +52,5 @@ target_include_directories(midip PRIVATE ${PROJECT_SOURCE_DIR})
 target_compile_features(midip PRIVATE cxx_std_23)
 target_compile_options(midip PRIVATE ${BASE_OPTIONS})
 target_compile_definitions(midip PRIVATE $<$<BOOL:${USE_MINIAUDIO}>:"MDP_MINIAUDIO">)
-target_link_libraries(midip PRIVATE fmt $<$<BOOL:${USE_MINIAUDIO}>:miniaudio::miniaudio>)
+target_link_libraries(midip PRIVATE fmt $<$<BOOL:${USE_MINIAUDIO}>:miniaudio::miniaudio> Threads::Threads)
 source_group(TREE "${CMAKE_CURRENT_LIST_DIR}" FILES ${HEADERS} ${SOURCES})
