--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-project(midip VERSION 0.0.1)
+project(ensam VERSION 0.0.2)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)  # Group CMake targets inside a folder
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)         # Generate compile_commands.json for language servers
 
@@ -20,6 +20,35 @@ if(USE_MINIAUDIO)
     )
     list(APPEND FETCH_CONTENTS miniaudio)
 endif()
+FetchContent_Declare(
+    utf8cpp
+    GIT_REPOSITORY https://github.com/nemtrif/utfcpp.git
+    GIT_TAG        v4.0.5
+)
+list(APPEND FETCH_CONTENTS utf8cpp)
+FetchContent_Declare(
+    asio
+    GIT_REPOSITORY https://github.com/mononerv/asio.git
+    GIT_TAG        37380337ae0cc601b5e40e4e7739ab7b0a12cb63
+)
+list(APPEND FETCH_CONTENTS asio)
+FetchContent_Declare(
+    stb
+    GIT_REPOSITORY https://github.com/mononerv/stb.git
+    GIT_TAG        698c6fb9889c71494b49c9187d249af5fc87b211
+)
+list(APPEND FETCH_CONTENTS stb)
+# Turn off BUILD_TESTING globally to prevent CTest from being included in CTRE
+set(BUILD_TESTING OFF CACHE BOOL "Disable testing globally" FORCE)
+# Set the CTRE_BUILD_TESTS option before including the CTRE library
+set(CTRE_BUILD_TESTS OFF CACHE BOOL "Build ctre Tests" FORCE)
+FetchContent_Declare(
+    ctre
+    GIT_REPOSITORY https://github.com/hanickadot/compile-time-regular-expressions.git
+    GIT_TAG        v3.9.0
+)
+list(APPEND FETCH_CONTENTS ctre)
+
 FetchContent_MakeAvailable(${FETCH_CONTENTS})
 find_package(Threads REQUIRED)
 
@@ -45,12 +74,44 @@ else()
     )
 endif()
 
+set(HEADERS
+    ens/midi.hpp
+    ens/utils.hpp
+) 
+set(SOURCES
+    ens/midi.cpp
+)
+add_library(ens OBJECT ${HEADERS} ${SOURCES})
+target_include_directories(ens PRIVATE ${PROJECT_SOURCE_DIR})
+target_compile_features(ens PRIVATE cxx_std_23)
+target_compile_options(ens PRIVATE ${BASE_OPTIONS})
+target_compile_definitions(ens PRIVATE $<$<BOOL:${USE_MINIAUDIO}>:"MDP_MINIAUDIO">)
+target_link_libraries(ens
+    PUBLIC
+    fmt
+    asio::asio
+    utf8cpp
+    ctre
+    stb::stb
+    Threads::Threads
+    $<$<BOOL:${USE_MINIAUDIO}>:miniaudio::miniaudio>
+)
+source_group(TREE "${CMAKE_CURRENT_LIST_DIR}" FILES ${HEADERS} ${SOURCES})
+
 set(HEADERS "")
-set(SOURCES midip.cpp)
-add_executable(midip ${HEADERS} ${SOURCES})
-target_include_directories(midip PRIVATE ${PROJECT_SOURCE_DIR})
-target_compile_features(midip PRIVATE cxx_std_23)
-target_compile_options(midip PRIVATE ${BASE_OPTIONS})
-target_compile_definitions(midip PRIVATE $<$<BOOL:${USE_MINIAUDIO}>:"MDP_MINIAUDIO">)
-target_link_libraries(midip PRIVATE fmt $<$<BOOL:${USE_MINIAUDIO}>:miniaudio::miniaudio> Threads::Threads)
+set(SOURCES ensam.cpp)
+add_executable(ensam ${HEADERS} ${SOURCES})
+target_include_directories(ensam PRIVATE ${PROJECT_SOURCE_DIR})
+target_compile_features(ensam PRIVATE cxx_std_23)
+target_compile_options(ensam PRIVATE ${BASE_OPTIONS})
+target_link_libraries(ensam PRIVATE ens)
+source_group(TREE "${CMAKE_CURRENT_LIST_DIR}" FILES ${HEADERS} ${SOURCES})
+
+set(HEADERS "")
+set(SOURCES maestro.cpp)
+add_executable(maestro ${HEADERS} ${SOURCES})
+target_include_directories(maestro PRIVATE ${PROJECT_SOURCE_DIR})
+target_compile_features(maestro PRIVATE cxx_std_23)
+target_compile_options(maestro PRIVATE ${BASE_OPTIONS})
+target_link_libraries(maestro PRIVATE ens)
 source_group(TREE "${CMAKE_CURRENT_LIST_DIR}" FILES ${HEADERS} ${SOURCES})
